@startuml DiagrammeClasse_PNEUMOIA
!theme plain
skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam packageFontSize 13
skinparam packageStyle rectangle
skinparam backgroundColor white
skinparam class {
    BackgroundColor #EAF4FB
    BorderColor #2980B9
    HeaderBackgroundColor #2980B9
    HeaderFontColor white
    ArrowColor #333333
}
skinparam package {
    BorderColor #888888
    BackgroundColor #FDFEFE
    FontColor #333333
}
skinparam note {
    BackgroundColor #FEF9E7
    BorderColor #F39C12
}

' ============================================================
'  LÉGENDE DES RELATIONS
'    ◆──  Composition  : l'enfant ne peut exister sans le parent
'    ◇──  Agrégation   : l'enfant peut exister indépendamment
'    ───  Association  : lien fonctionnel sans dépendance de cycle de vie
'    --|> Héritage     : (non utilisé ici, héritage uniquement via Base ORM)
' ============================================================

' ============================================================
'  PACKAGE UTILISATEURS
' ============================================================
package "Utilisateurs" <<Rectangle>> #D4E6F1 {

    class Medecin {
        + id : UUID <<PK>>
        + civilite : String
        + nom : String
        + prenom : String
        + email : String <<unique>>
        + password_hash : String
        + specialite : String
        + numero_rpps : String <<unique>>
        + etablissement : String
        + telephone : String
        + statut : StatutMedecin
        + code_referent : String <<unique>>
        + preferences : JSON
        + valide_par : UUID <<FK>>
        + created_at : DateTime
        + derniere_connexion : DateTime
    }

    class Admin {
        + id : UUID <<PK>>
        + nom : String
        + email : String <<unique>>
        + password_hash : String
        + phone : String
        + reset_otp : String
        + otp_expiry : DateTime
        + created_at : DateTime
        --
        + is_otp_valid() : bool
        + clear_otp() : void
    }

    class AideSoignant {
        + id : UUID <<PK>>
        + medecin_id : UUID <<FK>>
        + nom : String
        + prenom : String
        + email : String <<unique>>
        + password_hash : String
        + telephone : String
        + statut : String
        + peut_creer_patient : Boolean
        + peut_lire_dossier : Boolean
        + peut_modifier_patient : Boolean
        + peut_saisir_symptomes : Boolean
        + peut_voir_diagnostic : Boolean
        + peut_prescrire : Boolean
        + preferences : JSON
        + created_at : DateTime
    }

    class Patient {
        + id : UUID <<PK>>
        + created_by : UUID <<FK>>
        + aide_id : UUID <<FK>>
        + nom : String
        + prenom : String
        + civilite : String
        + date_naissance : Date
        + sexe : String
        + groupe_sanguin : String
        + telephone : String
        + email : String
        + adresse : String
        + profession : String
        + personne_a_contacter : String
        + telephone_urgence : String
        + allergies : JSON
        + antecedents : JSON
        + created_at : DateTime
        + deleted_at : DateTime
    }
}

' ============================================================
'  PACKAGE CONSULTATION & IA
' ============================================================
package "Consultation & Diagnostic IA" <<Rectangle>> #D5F5E3 {

    class Consultation {
        + id : UUID <<PK>>
        + patient_id : UUID <<FK>>
        + medecin_id : UUID <<FK>>
        + symptomes : JSON
        + antecedents_consultation : JSON
        + statut : StatutConsultation
        + statut_clinique : StatutClinique
        + avis_medecin : String
        + observations : String
        + prescriptions : JSON
        + recommandations : String
        + prochain_rdv : DateTime
        + partage : JSON
        + created_at : DateTime
    }

    class DiagnosticIA {
        + id : UUID <<PK>>
        + consultation_id : UUID <<FK, unique>>
        + maladies : JSON
        + recommandations : JSON
        + etat_patient : EtatPatient
        + version_modele : String
        + duree_inference_ms : Integer
        + created_at : DateTime
    }

    class FeedbackIA {
        + id : UUID <<PK>>
        + diagnostic_id : UUID <<FK>>
        + medecin_id : UUID <<FK>>
        + concordance : Boolean
        + diagnostic_final : String
        + commentaire : String
        + created_at : DateTime
    }
}

' ============================================================
'  PACKAGE CONTRÔLE D'ACCÈS
' ============================================================
package "Contrôle d'Accès" <<Rectangle>> #FDEDEC {

    class AccesPatient {
        + id : UUID <<PK>>
        + patient_id : UUID <<FK>>
        + medecin_demandeur_id : UUID <<FK>>
        + medecin_proprietaire_id : UUID <<FK>>
        + statut : StatutAcces
        + justificatif_demande : String
        + motif_refus : String
        + created_at : DateTime
        --
        <<unique>> (patient_id, medecin_demandeur_id)
    }
}

' ============================================================
'  PACKAGE COMMUNAUTÉ MÉDICALE
' ============================================================
package "Communauté Médicale" <<Rectangle>> #FEF9E7 {

    class Communaute {
        + id : UUID <<PK>>
        + createur_id : UUID <<FK>>
        + nom : String
        + description : String
        + type : TypeCommunaute
        + specialite : String
        + avatar_url : String
        + nb_membres : Integer
        + nb_cas : Integer
        + created_at : DateTime
    }

    class MembreCommunaute {
        + id : UUID <<PK>>
        + communaute_id : UUID <<FK>>
        + medecin_id : UUID <<FK>>
        + role : RoleMembre
        + statut : StatutMembre
        + joined_at : DateTime
        --
        <<unique>> (communaute_id, medecin_id)
    }

    class Publication {
        + id : UUID <<PK>>
        + communaute_id : UUID <<FK>>
        + auteur_id : UUID <<FK>>
        + consultation_id : UUID <<FK>>
        + ressource_id : UUID <<FK>>
        + titre : String
        + contenu : String
        + type : TypePublication
        + tags : JSON
        + nb_commentaires : Integer
        + nb_reactions : Integer
        + created_at : DateTime
    }

    class Commentaire {
        + id : UUID <<PK>>
        + publication_id : UUID <<FK>>
        + parent_id : UUID <<FK>>
        + auteur_id : UUID <<FK>>
        + auteur_type : TypeAuteur
        + contenu : String
        + likes_count : Integer
        + created_at : DateTime
    }

    class LikeCommentaire {
        + id : UUID <<PK>>
        + commentaire_id : UUID <<FK>>
        + auteur_id : UUID
        + auteur_type : TypeAuteur
        --
        <<unique>> (commentaire_id, auteur_id)
    }

    class Reaction {
        + id : UUID <<PK>>
        + publication_id : UUID <<FK>>
        + medecin_id : UUID <<FK>>
        + type : TypeReaction
        --
        <<unique>> (publication_id, medecin_id)
    }
}

' ============================================================
'  PACKAGE COMMUNICATION ÉQUIPE
' ============================================================
package "Communication Équipe" <<Rectangle>> #F4ECF7 {

    class MessageEquipe {
        + id : UUID <<PK>>
        + medecin_referent_id : UUID <<FK>>
        + auteur_medecin_id : UUID <<FK>>
        + auteur_aide_id : UUID <<FK>>
        + auteur_type : TypeAuteur
        + parent_id : UUID <<FK>>
        + contenu : String
        + type_msg : TypeMessage
        + pinned : Boolean
        + likes_count : Integer
        + created_at : DateTime
    }

    class LikeMessageEquipe {
        + id : UUID <<PK>>
        + message_id : UUID <<FK>>
        + auteur_id : UUID
        + auteur_type : TypeAuteur
        --
        <<unique>> (message_id, auteur_id)
    }
}

' ============================================================
'  PACKAGE RESSOURCES & DOCUMENTS
' ============================================================
package "Ressources & Documents" <<Rectangle>> #EAFAF1 {

    class DocumentMedecin {
        + id : UUID <<PK>>
        + medecin_id : UUID <<FK>>
        + type_document : TypeDocument
        + url_fichier : String
        + nom_fichier : String
        + taille_octets : Integer
        + mime_type : String
        + statut : String
        + motif_rejet : String
        + created_at : DateTime
    }

    class RessourceMedicale {
        + id : UUID <<PK>>
        + medecin_id : UUID <<FK>>
        + titre : String
        + resume : String
        + contenu : String
        + pathologie : String
        + pdf_url : String
        + tags : JSON
        + niveau : String
        + nb_telechargements : Integer
        + nb_vues : Integer
        + publie : Boolean
        + created_at : DateTime
    }

    class CasCliniquPublic {
        + id : UUID <<PK>>
        + auteur_id : UUID <<FK>>
        + titre : String
        + pathologie : String
        + description : String
        + tags : JSON
        + pdf_url : String
        + anonymise : Boolean
        + nb_vues : Integer
        + nb_telechargements : Integer
        + created_at : DateTime
    }
}

' ============================================================
'  PACKAGE SUPPORT & TRAÇABILITÉ
' ============================================================
package "Support & Traçabilité" <<Rectangle>> #F2F3F4 {

    class QuestionMedecin {
        + id : UUID <<PK>>
        + medecin_id : UUID <<FK>>
        + repondu_par : UUID <<FK>>
        + question : String
        + categorie : String
        + statut : StatutQuestion
        + reponse : String
        + repondu_le : DateTime
        + created_at : DateTime
    }

    class FAQPubliee {
        + id : UUID <<PK>>
        + admin_id : UUID <<FK>>
        + question : String
        + reponse : String
        + categorie : String
        + publie : Boolean
        + nb_vues : Integer
        + created_at : DateTime
    }

    class OTPCode {
        + id : UUID <<PK>>
        + medecin_id : UUID <<FK>>
        + code : String
        + expires_at : DateTime
        + used : Boolean
        + purpose : String
        + fail_count : Integer
        + created_at : DateTime
    }

    class AuditLog {
        + id : UUID <<PK>>
        + medecin_id : UUID <<FK>>
        + action : String
        + details : JSON
        + ip_address : String
        + user_agent : String
        + created_at : DateTime
    }

    class Notification {
        + id : UUID <<PK>>
        + destinataire_id : UUID
        + type_dest : TypeDestinataire
        + type_notif : String
        + titre : String
        + message : String
        + meta : JSON
        + lu : Boolean
        + created_at : DateTime
    }

    class RequeteMedecin {
        + id : UUID <<PK>>
        + medecin_id : UUID
        + nom_medecin : String
        + email_medecin : String
        + titre : String
        + categorie : CategorieRequete
        + description : String
        + statut : StatutRequete
        + action_admin : String
        + reponse_admin : String
        + created_at : DateTime
    }

    class Parametre {
        + id : UUID <<PK>>
        + cle : String <<unique>>
        + valeur : JSON
        + updated_at : DateTime
    }
}

' ============================================================
'  ENUMERATIONS (types métier)
' ============================================================
package "Types & Énumérations" <<Rectangle>> #FAF9F9 {
    enum StatutMedecin {
        en_attente
        valide
        rejete
        suspendu
        supprime
    }
    enum StatutConsultation {
        en_cours
        terminee
        archivee
    }
    enum StatutClinique {
        stable
        surveille
        urgent
        critique
    }
    enum EtatPatient {
        stable
        surveille
        critique
    }
    enum StatutAcces {
        en_attente
        accepte
        refuse
    }
    enum TypeCommunaute {
        publique
        privee
    }
    enum RoleMembre {
        createur
        admin
        membre
    }
    enum TypePublication {
        cas_clinique
        question
        article
        discussion
    }
    enum TypeAuteur {
        medecin
        aide_soignant
    }
    enum TypeReaction {
        utile
        insightful
        accord
        desaccord
    }
    enum TypeMessage {
        rapport
        alerte
        info
    }
    enum StatutQuestion {
        en_attente
        repondu
    }
    enum TypeDocument {
        diplome
        rpps
        identite
        autre
    }
}

' ============================================================
'  RELATIONS DE COMPOSITION  ◆── (enfant lié au cycle de vie du parent)
' ============================================================

' Medecin possède des objets liés à son existence propre
Medecin "1" *-down- "0..*" AideSoignant        : < supervise
Medecin "1" *-down- "0..*" DocumentMedecin     : < possède
Medecin "1" *-down- "0..*" OTPCode             : < génère
Medecin "1" *-down- "0..*" AuditLog            : < tracé dans

' Patient → Consultation : les consultations n'existent que pour un patient
Patient "1" *-right- "0..*" Consultation       : < génère

' Consultation → DiagnosticIA : 1 consultation produit au plus 1 diagnostic (1-to-1)
Consultation "1" *-right- "0..1" DiagnosticIA  : < produit

' Communauté → ses membres et publications (suppression en cascade)
Communaute "1" *-down- "0..*" MembreCommunaute : < contient
Communaute "1" *-down- "0..*" Publication      : < héberge

' Publication → ses commentaires et réactions
Publication "1" *-down- "0..*" Commentaire     : < reçoit
Publication "1" *-down- "0..*" Reaction        : < reçoit

' Commentaire → ses likes
Commentaire "1" *-down- "0..*" LikeCommentaire : < reçoit

' MessageEquipe → ses likes
MessageEquipe "1" *-down- "0..*" LikeMessageEquipe : < reçoit

' ============================================================
'  RELATIONS D'AGRÉGATION  ◇── (enfant indépendant du parent)
' ============================================================

' Medecin crée/possède, mais les entités peuvent être repartagées ou conservées
Medecin "1" o-right- "0..*" Patient            : crée >
Medecin "1" o-- "0..*" Communaute              : crée >
Medecin "1" o-- "0..*" RessourceMedicale       : crée >
Medecin "1" o-- "0..*" CasCliniquPublic        : publie >

' DiagnosticIA → FeedbackIA (le feedback existe indépendamment)
DiagnosticIA "1" o-right- "0..*" FeedbackIA    : évalué par >

' ============================================================
'  RELATIONS D'ASSOCIATION  ──> (lien fonctionnel)
' ============================================================

' Medecin conduit des consultations
Medecin "1" --right-> "0..*" Consultation      : conduit >

' Medecin participe aux communautés, publications, réactions
Medecin "1" --> "0..*" MembreCommunaute        : rejoint >
Medecin "1" --> "0..*" Publication             : auteur >
Medecin "1" --> "0..*" Reaction                : émet >
Medecin "1" --> "0..*" FeedbackIA              : émet >

' Admin valide les médecins et gère le support
Admin "1" --> "0..*" Medecin                   : valide / rejette >
Admin "1" --> "0..*" QuestionMedecin           : répond >
Admin "1" --> "0..*" FAQPubliee                : publie >

' Medecin soumet des questions
Medecin "1" --> "0..*" QuestionMedecin         : soumet >

' Contrôle d'accès inter-médecins sur un patient
Patient "1" --> "0..*" AccesPatient            : protégé par >
Medecin "1" --> "0..*" AccesPatient            : demande / détient >

' Consultation partagée dans une publication (optionnel)
Consultation "0..1" --> "0..*" Publication     : partagée dans >

' Commentaire peut répondre à un autre commentaire (auto-relation)
Commentaire "0..1" --> "0..*" Commentaire      : répond à >

' Message peut répondre à un autre message (auto-relation)
MessageEquipe "0..1" --> "0..*" MessageEquipe  : répond à >

' AideSoignant peut écrire dans la messagerie équipe
AideSoignant "1" --> "0..*" MessageEquipe      : rédige >

' AideSoignant peut créer un patient (selon permissions)
AideSoignant "0..1" --> "0..*" Patient         : enregistre >

' Note explicative sur les types polymorphes
note bottom of Commentaire
  auteur_type = 'medecin' → auteur_id référence Medecin
  auteur_type = 'aide_soignant' → auteur_id référence AideSoignant
  (relation polymorphe — non représentable par une FK simple)
end note

note bottom of MessageEquipe
  auteur_type = 'medecin' → auteur_medecin_id
  auteur_type = 'aide_soignant' → auteur_aide_id
  (relation polymorphe)
end note

note bottom of Notification
  destinataire_id peut référencer Medecin OU AideSoignant
  selon type_dest (relation polymorphe sans FK)
end note

@enduml
